[package]
name = "mire-compiler"
version = "0.1.0"
edition = "2021"
description = "Primary compiler repository for the Mire programming language"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.8"
libloading = { version = "0.8", optional = true }
libc = "0.2"
tiny_http = "0.12"
sysinfo = "0.32"

[features]
default = ["std", "ffi"]
std = []
ffi = ["libloading"]

[lib]
name = "mire"
path = "src/lib.rs"

[[bin]]
name = "mire"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
