[package]
name = "Avenys"
version = "1.0.2"
edition = "2024"
description = "(AMC) Avenys is the mire compiler"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.8"
libloading = { version = "0.8", optional = true }
libc = "0.2"
tiny_http = "0.12"
sysinfo = "0.32"

[features]
default = ["std", "ffi"]
std = []
ffi = ["libloading"]

[lib]
name = "mire"
path = "src/lib.rs"

[[bin]]
name = "mire"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
